lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    k8s.scw.cloud/ingress: traefik2
  annotations:
    service.beta.kubernetes.io/scw-loadbalancer-proxy-protocol-v2: "443"
spec:
  type: LoadBalancer
  ports:
    - port: 443
      name: https
      targetPort: 8443
  selector:
    app.kubernetes.io/name: traefik
